minlisp.output
Grammar

    0 $accept: ML $end

    1 ML: arrays program

    2 arrays: %empty
    3       | arrays array

    4 array: '(' _array ID NUM ')'

    5 program: program function
    6        | function

    7 $@1: %empty

    8 function: '(' _define ID $@1 param_list expr ')'

    9 param_list: '(' ')'
   10           | '(' id_list ')'

   11 id_list: id_list ID
   12        | ID

   13 expr: NUM
   14     | ID
   15     | ID '[' expr ']'
   16     | _true
   17     | _false
   18     | '(' _if expr expr expr ')'

   19 $@2: %empty

   20 expr: '(' _while expr $@2 expr ')'
   21     | '(' ID actual_list ')'
   22     | '(' _write expr ')'
   23     | '(' _writeln expr ')'
   24     | '(' _read ')'

   25 $@3: %empty

   26 $@4: %empty

   27 expr: '(' _let $@3 '(' assign_list ')' $@4 expr ')'
   28     | '(' _set ID expr ')'
   29     | '(' _set ID '[' expr ']' expr ')'
   30     | '(' '+' expr expr ')'
   31     | '(' '-' expr expr ')'
   32     | '(' '*' expr expr ')'
   33     | '(' '/' expr expr ')'
   34     | '(' '<' expr expr ')'
   35     | '(' '>' expr expr ')'
   36     | '(' LTE expr expr ')'
   37     | '(' GTE expr expr ')'
   38     | '(' '=' expr expr ')'
   39     | '(' NEQ expr expr ')'
   40     | '(' '-' expr ')'
   41     | '(' _and expr expr ')'
   42     | '(' '&' expr expr ')'
   43     | '(' _or expr expr ')'
   44     | '(' '|' expr expr ')'
   45     | '(' _not expr ')'
   46     | '(' '!' expr ')'
   47     | '(' _seq expr_list ')'

   48 actual_list: actual_list expr
   49            | %empty

   50 assign_list: assign_list '(' ID expr ')'
   51            | '(' ID expr ')'

   52 expr_list: expr_list expr
   53          | expr


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 46
    '&' (38) 42
    '(' (40) 4 8 9 10 18 20 21 22 23 24 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 50 51
    ')' (41) 4 8 9 10 18 20 21 22 23 24 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 50 51
    '*' (42) 32
    '+' (43) 30
    '-' (45) 31 40
    '/' (47) 33
    '<' (60) 34
    '=' (61) 38
    '>' (62) 35
    '[' (91) 15 29
    ']' (93) 15 29
    '|' (124) 44
    error (256)
    _array (258) 4
    _seq (259) 47
    _define (260) 8
    _if (261) 18
    _while (262) 20
    _write (263) 22
    _writeln (264) 23
    _read (265) 24
    _and (266) 41
    _or (267) 43
    _not (268) 45
    _set (269) 28 29
    _let (270) 27
    _true (271) 16
    _false (272) 17
    LTE (273) 36
    NEQ (274) 39
    GTE (275) 37
    ID <nameVal> (276) 4 8 11 12 14 15 21 28 29 50 51
    NUM <intVal> (277) 4 13


Nonterminals, with rules where they appear

    $accept (37)
        on left: 0
    ML (38)
        on left: 1
        on right: 0
    arrays (39)
        on left: 2 3
        on right: 1 3
    array (40)
        on left: 4
        on right: 3
    program (41)
        on left: 5 6
        on right: 1 5
    function (42)
        on left: 8
        on right: 5 6
    $@1 (43)
        on left: 7
        on right: 8
    param_list <paramsListType> (44)
        on left: 9 10
        on right: 8
    id_list <paramsListType> (45)
        on left: 11 12
        on right: 10 11
    expr <symbolPointerType> (46)
        on left: 13 14 15 16 17 18 20 21 22 23 24 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47
        on right: 8 15 18 20 22 23 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 48 50 51 52 53
    $@2 (47)
        on left: 19
        on right: 20
    $@3 (48)
        on left: 25
        on right: 27
    $@4 (49)
        on left: 26
        on right: 27
    actual_list <paramsListType> (50)
        on left: 48 49
        on right: 21 48
    assign_list <paramsListType> (51)
        on left: 50 51
        on right: 27 50
    expr_list <paramsListType> (52)
        on left: 52 53
        on right: 47 52


State 0

    0 $accept: . ML $end

    $default  reduce using rule 2 (arrays)

    ML      go to state 1
    arrays  go to state 2


State 1

    0 $accept: ML . $end

    $end  shift, and go to state 3


State 2

    1 ML: arrays . program
    3 arrays: arrays . array

    '('  shift, and go to state 4

    array     go to state 5
    program   go to state 6
    function  go to state 7


State 3

    0 $accept: ML $end .

    $default  accept


State 4

    4 array: '(' . _array ID NUM ')'
    8 function: '(' . _define ID $@1 param_list expr ')'

    _array   shift, and go to state 8
    _define  shift, and go to state 9


State 5

    3 arrays: arrays array .

    $default  reduce using rule 3 (arrays)


State 6

    1 ML: arrays program .
    5 program: program . function

    '('  shift, and go to state 10

    $default  reduce using rule 1 (ML)

    function  go to state 11


State 7

    6 program: function .

    $default  reduce using rule 6 (program)


State 8

    4 array: '(' _array . ID NUM ')'

    ID  shift, and go to state 12


State 9

    8 function: '(' _define . ID $@1 param_list expr ')'

    ID  shift, and go to state 13


State 10

    8 function: '(' . _define ID $@1 param_list expr ')'

    _define  shift, and go to state 9


State 11

    5 program: program function .

    $default  reduce using rule 5 (program)


State 12

    4 array: '(' _array ID . NUM ')'

    NUM  shift, and go to state 14


State 13

    8 function: '(' _define ID . $@1 param_list expr ')'

    $default  reduce using rule 7 ($@1)

    $@1  go to state 15


State 14

    4 array: '(' _array ID NUM . ')'

    ')'  shift, and go to state 16


State 15

    8 function: '(' _define ID $@1 . param_list expr ')'

    '('  shift, and go to state 17

    param_list  go to state 18


State 16

    4 array: '(' _array ID NUM ')' .

    $default  reduce using rule 4 (array)


State 17

    9 param_list: '(' . ')'
   10           | '(' . id_list ')'

    ID   shift, and go to state 19
    ')'  shift, and go to state 20

    id_list  go to state 21


State 18

    8 function: '(' _define ID $@1 param_list . expr ')'

    _true   shift, and go to state 22
    _false  shift, and go to state 23
    ID      shift, and go to state 24
    NUM     shift, and go to state 25
    '('     shift, and go to state 26

    expr  go to state 27


State 19

   12 id_list: ID .

    $default  reduce using rule 12 (id_list)


State 20

    9 param_list: '(' ')' .

    $default  reduce using rule 9 (param_list)


State 21

   10 param_list: '(' id_list . ')'
   11 id_list: id_list . ID

    ID   shift, and go to state 28
    ')'  shift, and go to state 29


State 22

   16 expr: _true .

    $default  reduce using rule 16 (expr)


State 23

   17 expr: _false .

    $default  reduce using rule 17 (expr)


State 24

   14 expr: ID .
   15     | ID . '[' expr ']'

    '['  shift, and go to state 30

    $default  reduce using rule 14 (expr)


State 25

   13 expr: NUM .

    $default  reduce using rule 13 (expr)


State 26

   18 expr: '(' . _if expr expr expr ')'
   20     | '(' . _while expr $@2 expr ')'
   21     | '(' . ID actual_list ')'
   22     | '(' . _write expr ')'
   23     | '(' . _writeln expr ')'
   24     | '(' . _read ')'
   27     | '(' . _let $@3 '(' assign_list ')' $@4 expr ')'
   28     | '(' . _set ID expr ')'
   29     | '(' . _set ID '[' expr ']' expr ')'
   30     | '(' . '+' expr expr ')'
   31     | '(' . '-' expr expr ')'
   32     | '(' . '*' expr expr ')'
   33     | '(' . '/' expr expr ')'
   34     | '(' . '<' expr expr ')'
   35     | '(' . '>' expr expr ')'
   36     | '(' . LTE expr expr ')'
   37     | '(' . GTE expr expr ')'
   38     | '(' . '=' expr expr ')'
   39     | '(' . NEQ expr expr ')'
   40     | '(' . '-' expr ')'
   41     | '(' . _and expr expr ')'
   42     | '(' . '&' expr expr ')'
   43     | '(' . _or expr expr ')'
   44     | '(' . '|' expr expr ')'
   45     | '(' . _not expr ')'
   46     | '(' . '!' expr ')'
   47     | '(' . _seq expr_list ')'

    _seq      shift, and go to state 31
    _if       shift, and go to state 32
    _while    shift, and go to state 33
    _write    shift, and go to state 34
    _writeln  shift, and go to state 35
    _read     shift, and go to state 36
    _and      shift, and go to state 37
    _or       shift, and go to state 38
    _not      shift, and go to state 39
    _set      shift, and go to state 40
    _let      shift, and go to state 41
    LTE       shift, and go to state 42
    NEQ       shift, and go to state 43
    GTE       shift, and go to state 44
    ID        shift, and go to state 45
    '+'       shift, and go to state 46
    '-'       shift, and go to state 47
    '*'       shift, and go to state 48
    '/'       shift, and go to state 49
    '<'       shift, and go to state 50
    '>'       shift, and go to state 51
    '='       shift, and go to state 52
    '&'       shift, and go to state 53
    '|'       shift, and go to state 54
    '!'       shift, and go to state 55


State 27

    8 function: '(' _define ID $@1 param_list expr . ')'

    ')'  shift, and go to state 56


State 28

   11 id_list: id_list ID .

    $default  reduce using rule 11 (id_list)


State 29

   10 param_list: '(' id_list ')' .

    $default  reduce using rule 10 (param_list)


State 30

   15 expr: ID '[' . expr ']'

    _true   shift, and go to state 22
    _false  shift, and go to state 23
    ID      shift, and go to state 24
    NUM     shift, and go to state 25
    '('     shift, and go to state 26

    expr  go to state 57


State 31

   47 expr: '(' _seq . expr_list ')'

    _true   shift, and go to state 22
    _false  shift, and go to state 23
    ID      shift, and go to state 24
    NUM     shift, and go to state 25
    '('     shift, and go to state 26

    expr       go to state 58
    expr_list  go to state 59


State 32

   18 expr: '(' _if . expr expr expr ')'

    _true   shift, and go to state 22
    _false  shift, and go to state 23
    ID      shift, and go to state 24
    NUM     shift, and go to state 25
    '('     shift, and go to state 26

    expr  go to state 60


State 33

   20 expr: '(' _while . expr $@2 expr ')'

    _true   shift, and go to state 22
    _false  shift, and go to state 23
    ID      shift, and go to state 24
    NUM     shift, and go to state 25
    '('     shift, and go to state 26

    expr  go to state 61


State 34

   22 expr: '(' _write . expr ')'

    _true   shift, and go to state 22
    _false  shift, and go to state 23
    ID      shift, and go to state 24
    NUM     shift, and go to state 25
    '('     shift, and go to state 26

    expr  go to state 62


State 35

   23 expr: '(' _writeln . expr ')'

    _true   shift, and go to state 22
    _false  shift, and go to state 23
    ID      shift, and go to state 24
    NUM     shift, and go to state 25
    '('     shift, and go to state 26

    expr  go to state 63


State 36

   24 expr: '(' _read . ')'

    ')'  shift, and go to state 64


State 37

   41 expr: '(' _and . expr expr ')'

    _true   shift, and go to state 22
    _false  shift, and go to state 23
    ID      shift, and go to state 24
    NUM     shift, and go to state 25
    '('     shift, and go to state 26

    expr  go to state 65


State 38

   43 expr: '(' _or . expr expr ')'

    _true   shift, and go to state 22
    _false  shift, and go to state 23
    ID      shift, and go to state 24
    NUM     shift, and go to state 25
    '('     shift, and go to state 26

    expr  go to state 66


State 39

   45 expr: '(' _not . expr ')'

    _true   shift, and go to state 22
    _false  shift, and go to state 23
    ID      shift, and go to state 24
    NUM     shift, and go to state 25
    '('     shift, and go to state 26

    expr  go to state 67


State 40

   28 expr: '(' _set . ID expr ')'
   29     | '(' _set . ID '[' expr ']' expr ')'

    ID  shift, and go to state 68


State 41

   27 expr: '(' _let . $@3 '(' assign_list ')' $@4 expr ')'

    $default  reduce using rule 25 ($@3)

    $@3  go to state 69


State 42

   36 expr: '(' LTE . expr expr ')'

    _true   shift, and go to state 22
    _false  shift, and go to state 23
    ID      shift, and go to state 24
    NUM     shift, and go to state 25
    '('     shift, and go to state 26

    expr  go to state 70


State 43

   39 expr: '(' NEQ . expr expr ')'

    _true   shift, and go to state 22
    _false  shift, and go to state 23
    ID      shift, and go to state 24
    NUM     shift, and go to state 25
    '('     shift, and go to state 26

    expr  go to state 71


State 44

   37 expr: '(' GTE . expr expr ')'

    _true   shift, and go to state 22
    _false  shift, and go to state 23
    ID      shift, and go to state 24
    NUM     shift, and go to state 25
    '('     shift, and go to state 26

    expr  go to state 72


State 45

   21 expr: '(' ID . actual_list ')'

    $default  reduce using rule 49 (actual_list)

    actual_list  go to state 73


State 46

   30 expr: '(' '+' . expr expr ')'

    _true   shift, and go to state 22
    _false  shift, and go to state 23
    ID      shift, and go to state 24
    NUM     shift, and go to state 25
    '('     shift, and go to state 26

    expr  go to state 74


State 47

   31 expr: '(' '-' . expr expr ')'
   40     | '(' '-' . expr ')'

    _true   shift, and go to state 22
    _false  shift, and go to state 23
    ID      shift, and go to state 24
    NUM     shift, and go to state 25
    '('     shift, and go to state 26

    expr  go to state 75


State 48

   32 expr: '(' '*' . expr expr ')'

    _true   shift, and go to state 22
    _false  shift, and go to state 23
    ID      shift, and go to state 24
    NUM     shift, and go to state 25
    '('     shift, and go to state 26

    expr  go to state 76


State 49

   33 expr: '(' '/' . expr expr ')'

    _true   shift, and go to state 22
    _false  shift, and go to state 23
    ID      shift, and go to state 24
    NUM     shift, and go to state 25
    '('     shift, and go to state 26

    expr  go to state 77


State 50

   34 expr: '(' '<' . expr expr ')'

    _true   shift, and go to state 22
    _false  shift, and go to state 23
    ID      shift, and go to state 24
    NUM     shift, and go to state 25
    '('     shift, and go to state 26

    expr  go to state 78


State 51

   35 expr: '(' '>' . expr expr ')'

    _true   shift, and go to state 22
    _false  shift, and go to state 23
    ID      shift, and go to state 24
    NUM     shift, and go to state 25
    '('     shift, and go to state 26

    expr  go to state 79


State 52

   38 expr: '(' '=' . expr expr ')'

    _true   shift, and go to state 22
    _false  shift, and go to state 23
    ID      shift, and go to state 24
    NUM     shift, and go to state 25
    '('     shift, and go to state 26

    expr  go to state 80


State 53

   42 expr: '(' '&' . expr expr ')'

    _true   shift, and go to state 22
    _false  shift, and go to state 23
    ID      shift, and go to state 24
    NUM     shift, and go to state 25
    '('     shift, and go to state 26

    expr  go to state 81


State 54

   44 expr: '(' '|' . expr expr ')'

    _true   shift, and go to state 22
    _false  shift, and go to state 23
    ID      shift, and go to state 24
    NUM     shift, and go to state 25
    '('     shift, and go to state 26

    expr  go to state 82


State 55

   46 expr: '(' '!' . expr ')'

    _true   shift, and go to state 22
    _false  shift, and go to state 23
    ID      shift, and go to state 24
    NUM     shift, and go to state 25
    '('     shift, and go to state 26

    expr  go to state 83


State 56

    8 function: '(' _define ID $@1 param_list expr ')' .

    $default  reduce using rule 8 (function)


State 57

   15 expr: ID '[' expr . ']'

    ']'  shift, and go to state 84


State 58

   53 expr_list: expr .

    $default  reduce using rule 53 (expr_list)


State 59

   47 expr: '(' _seq expr_list . ')'
   52 expr_list: expr_list . expr

    _true   shift, and go to state 22
    _false  shift, and go to state 23
    ID      shift, and go to state 24
    NUM     shift, and go to state 25
    '('     shift, and go to state 26
    ')'     shift, and go to state 85

    expr  go to state 86


State 60

   18 expr: '(' _if expr . expr expr ')'

    _true   shift, and go to state 22
    _false  shift, and go to state 23
    ID      shift, and go to state 24
    NUM     shift, and go to state 25
    '('     shift, and go to state 26

    expr  go to state 87


State 61

   20 expr: '(' _while expr . $@2 expr ')'

    $default  reduce using rule 19 ($@2)

    $@2  go to state 88


State 62

   22 expr: '(' _write expr . ')'

    ')'  shift, and go to state 89


State 63

   23 expr: '(' _writeln expr . ')'

    ')'  shift, and go to state 90


State 64

   24 expr: '(' _read ')' .

    $default  reduce using rule 24 (expr)


State 65

   41 expr: '(' _and expr . expr ')'

    _true   shift, and go to state 22
    _false  shift, and go to state 23
    ID      shift, and go to state 24
    NUM     shift, and go to state 25
    '('     shift, and go to state 26

    expr  go to state 91


State 66

   43 expr: '(' _or expr . expr ')'

    _true   shift, and go to state 22
    _false  shift, and go to state 23
    ID      shift, and go to state 24
    NUM     shift, and go to state 25
    '('     shift, and go to state 26

    expr  go to state 92


State 67

   45 expr: '(' _not expr . ')'

    ')'  shift, and go to state 93


State 68

   28 expr: '(' _set ID . expr ')'
   29     | '(' _set ID . '[' expr ']' expr ')'

    _true   shift, and go to state 22
    _false  shift, and go to state 23
    ID      shift, and go to state 24
    NUM     shift, and go to state 25
    '('     shift, and go to state 26
    '['     shift, and go to state 94

    expr  go to state 95


State 69

   27 expr: '(' _let $@3 . '(' assign_list ')' $@4 expr ')'

    '('  shift, and go to state 96


State 70

   36 expr: '(' LTE expr . expr ')'

    _true   shift, and go to state 22
    _false  shift, and go to state 23
    ID      shift, and go to state 24
    NUM     shift, and go to state 25
    '('     shift, and go to state 26

    expr  go to state 97


State 71

   39 expr: '(' NEQ expr . expr ')'

    _true   shift, and go to state 22
    _false  shift, and go to state 23
    ID      shift, and go to state 24
    NUM     shift, and go to state 25
    '('     shift, and go to state 26

    expr  go to state 98


State 72

   37 expr: '(' GTE expr . expr ')'

    _true   shift, and go to state 22
    _false  shift, and go to state 23
    ID      shift, and go to state 24
    NUM     shift, and go to state 25
    '('     shift, and go to state 26

    expr  go to state 99


State 73

   21 expr: '(' ID actual_list . ')'
   48 actual_list: actual_list . expr

    _true   shift, and go to state 22
    _false  shift, and go to state 23
    ID      shift, and go to state 24
    NUM     shift, and go to state 25
    '('     shift, and go to state 26
    ')'     shift, and go to state 100

    expr  go to state 101


State 74

   30 expr: '(' '+' expr . expr ')'

    _true   shift, and go to state 22
    _false  shift, and go to state 23
    ID      shift, and go to state 24
    NUM     shift, and go to state 25
    '('     shift, and go to state 26

    expr  go to state 102


State 75

   31 expr: '(' '-' expr . expr ')'
   40     | '(' '-' expr . ')'

    _true   shift, and go to state 22
    _false  shift, and go to state 23
    ID      shift, and go to state 24
    NUM     shift, and go to state 25
    '('     shift, and go to state 26
    ')'     shift, and go to state 103

    expr  go to state 104


State 76

   32 expr: '(' '*' expr . expr ')'

    _true   shift, and go to state 22
    _false  shift, and go to state 23
    ID      shift, and go to state 24
    NUM     shift, and go to state 25
    '('     shift, and go to state 26

    expr  go to state 105


State 77

   33 expr: '(' '/' expr . expr ')'

    _true   shift, and go to state 22
    _false  shift, and go to state 23
    ID      shift, and go to state 24
    NUM     shift, and go to state 25
    '('     shift, and go to state 26

    expr  go to state 106


State 78

   34 expr: '(' '<' expr . expr ')'

    _true   shift, and go to state 22
    _false  shift, and go to state 23
    ID      shift, and go to state 24
    NUM     shift, and go to state 25
    '('     shift, and go to state 26

    expr  go to state 107


State 79

   35 expr: '(' '>' expr . expr ')'

    _true   shift, and go to state 22
    _false  shift, and go to state 23
    ID      shift, and go to state 24
    NUM     shift, and go to state 25
    '('     shift, and go to state 26

    expr  go to state 108


State 80

   38 expr: '(' '=' expr . expr ')'

    _true   shift, and go to state 22
    _false  shift, and go to state 23
    ID      shift, and go to state 24
    NUM     shift, and go to state 25
    '('     shift, and go to state 26

    expr  go to state 109


State 81

   42 expr: '(' '&' expr . expr ')'

    _true   shift, and go to state 22
    _false  shift, and go to state 23
    ID      shift, and go to state 24
    NUM     shift, and go to state 25
    '('     shift, and go to state 26

    expr  go to state 110


State 82

   44 expr: '(' '|' expr . expr ')'

    _true   shift, and go to state 22
    _false  shift, and go to state 23
    ID      shift, and go to state 24
    NUM     shift, and go to state 25
    '('     shift, and go to state 26

    expr  go to state 111


State 83

   46 expr: '(' '!' expr . ')'

    ')'  shift, and go to state 112


State 84

   15 expr: ID '[' expr ']' .

    $default  reduce using rule 15 (expr)


State 85

   47 expr: '(' _seq expr_list ')' .

    $default  reduce using rule 47 (expr)


State 86

   52 expr_list: expr_list expr .

    $default  reduce using rule 52 (expr_list)


State 87

   18 expr: '(' _if expr expr . expr ')'

    _true   shift, and go to state 22
    _false  shift, and go to state 23
    ID      shift, and go to state 24
    NUM     shift, and go to state 25
    '('     shift, and go to state 26

    expr  go to state 113


State 88

   20 expr: '(' _while expr $@2 . expr ')'

    _true   shift, and go to state 22
    _false  shift, and go to state 23
    ID      shift, and go to state 24
    NUM     shift, and go to state 25
    '('     shift, and go to state 26

    expr  go to state 114


State 89

   22 expr: '(' _write expr ')' .

    $default  reduce using rule 22 (expr)


State 90

   23 expr: '(' _writeln expr ')' .

    $default  reduce using rule 23 (expr)


State 91

   41 expr: '(' _and expr expr . ')'

    ')'  shift, and go to state 115


State 92

   43 expr: '(' _or expr expr . ')'

    ')'  shift, and go to state 116


State 93

   45 expr: '(' _not expr ')' .

    $default  reduce using rule 45 (expr)


State 94

   29 expr: '(' _set ID '[' . expr ']' expr ')'

    _true   shift, and go to state 22
    _false  shift, and go to state 23
    ID      shift, and go to state 24
    NUM     shift, and go to state 25
    '('     shift, and go to state 26

    expr  go to state 117


State 95

   28 expr: '(' _set ID expr . ')'

    ')'  shift, and go to state 118


State 96

   27 expr: '(' _let $@3 '(' . assign_list ')' $@4 expr ')'

    '('  shift, and go to state 119

    assign_list  go to state 120


State 97

   36 expr: '(' LTE expr expr . ')'

    ')'  shift, and go to state 121


State 98

   39 expr: '(' NEQ expr expr . ')'

    ')'  shift, and go to state 122


State 99

   37 expr: '(' GTE expr expr . ')'

    ')'  shift, and go to state 123


State 100

   21 expr: '(' ID actual_list ')' .

    $default  reduce using rule 21 (expr)


State 101

   48 actual_list: actual_list expr .

    $default  reduce using rule 48 (actual_list)


State 102

   30 expr: '(' '+' expr expr . ')'

    ')'  shift, and go to state 124


State 103

   40 expr: '(' '-' expr ')' .

    $default  reduce using rule 40 (expr)


State 104

   31 expr: '(' '-' expr expr . ')'

    ')'  shift, and go to state 125


State 105

   32 expr: '(' '*' expr expr . ')'

    ')'  shift, and go to state 126


State 106

   33 expr: '(' '/' expr expr . ')'

    ')'  shift, and go to state 127


State 107

   34 expr: '(' '<' expr expr . ')'

    ')'  shift, and go to state 128


State 108

   35 expr: '(' '>' expr expr . ')'

    ')'  shift, and go to state 129


State 109

   38 expr: '(' '=' expr expr . ')'

    ')'  shift, and go to state 130


State 110

   42 expr: '(' '&' expr expr . ')'

    ')'  shift, and go to state 131


State 111

   44 expr: '(' '|' expr expr . ')'

    ')'  shift, and go to state 132


State 112

   46 expr: '(' '!' expr ')' .

    $default  reduce using rule 46 (expr)


State 113

   18 expr: '(' _if expr expr expr . ')'

    ')'  shift, and go to state 133


State 114

   20 expr: '(' _while expr $@2 expr . ')'

    ')'  shift, and go to state 134


State 115

   41 expr: '(' _and expr expr ')' .

    $default  reduce using rule 41 (expr)


State 116

   43 expr: '(' _or expr expr ')' .

    $default  reduce using rule 43 (expr)


State 117

   29 expr: '(' _set ID '[' expr . ']' expr ')'

    ']'  shift, and go to state 135


State 118

   28 expr: '(' _set ID expr ')' .

    $default  reduce using rule 28 (expr)


State 119

   51 assign_list: '(' . ID expr ')'

    ID  shift, and go to state 136


State 120

   27 expr: '(' _let $@3 '(' assign_list . ')' $@4 expr ')'
   50 assign_list: assign_list . '(' ID expr ')'

    '('  shift, and go to state 137
    ')'  shift, and go to state 138


State 121

   36 expr: '(' LTE expr expr ')' .

    $default  reduce using rule 36 (expr)


State 122

   39 expr: '(' NEQ expr expr ')' .

    $default  reduce using rule 39 (expr)


State 123

   37 expr: '(' GTE expr expr ')' .

    $default  reduce using rule 37 (expr)


State 124

   30 expr: '(' '+' expr expr ')' .

    $default  reduce using rule 30 (expr)


State 125

   31 expr: '(' '-' expr expr ')' .

    $default  reduce using rule 31 (expr)


State 126

   32 expr: '(' '*' expr expr ')' .

    $default  reduce using rule 32 (expr)


State 127

   33 expr: '(' '/' expr expr ')' .

    $default  reduce using rule 33 (expr)


State 128

   34 expr: '(' '<' expr expr ')' .

    $default  reduce using rule 34 (expr)


State 129

   35 expr: '(' '>' expr expr ')' .

    $default  reduce using rule 35 (expr)


State 130

   38 expr: '(' '=' expr expr ')' .

    $default  reduce using rule 38 (expr)


State 131

   42 expr: '(' '&' expr expr ')' .

    $default  reduce using rule 42 (expr)


State 132

   44 expr: '(' '|' expr expr ')' .

    $default  reduce using rule 44 (expr)


State 133

   18 expr: '(' _if expr expr expr ')' .

    $default  reduce using rule 18 (expr)


State 134

   20 expr: '(' _while expr $@2 expr ')' .

    $default  reduce using rule 20 (expr)


State 135

   29 expr: '(' _set ID '[' expr ']' . expr ')'

    _true   shift, and go to state 22
    _false  shift, and go to state 23
    ID      shift, and go to state 24
    NUM     shift, and go to state 25
    '('     shift, and go to state 26

    expr  go to state 139


State 136

   51 assign_list: '(' ID . expr ')'

    _true   shift, and go to state 22
    _false  shift, and go to state 23
    ID      shift, and go to state 24
    NUM     shift, and go to state 25
    '('     shift, and go to state 26

    expr  go to state 140


State 137

   50 assign_list: assign_list '(' . ID expr ')'

    ID  shift, and go to state 141


State 138

   27 expr: '(' _let $@3 '(' assign_list ')' . $@4 expr ')'

    $default  reduce using rule 26 ($@4)

    $@4  go to state 142


State 139

   29 expr: '(' _set ID '[' expr ']' expr . ')'

    ')'  shift, and go to state 143


State 140

   51 assign_list: '(' ID expr . ')'

    ')'  shift, and go to state 144


State 141

   50 assign_list: assign_list '(' ID . expr ')'

    _true   shift, and go to state 22
    _false  shift, and go to state 23
    ID      shift, and go to state 24
    NUM     shift, and go to state 25
    '('     shift, and go to state 26

    expr  go to state 145


State 142

   27 expr: '(' _let $@3 '(' assign_list ')' $@4 . expr ')'

    _true   shift, and go to state 22
    _false  shift, and go to state 23
    ID      shift, and go to state 24
    NUM     shift, and go to state 25
    '('     shift, and go to state 26

    expr  go to state 146


State 143

   29 expr: '(' _set ID '[' expr ']' expr ')' .

    $default  reduce using rule 29 (expr)


State 144

   51 assign_list: '(' ID expr ')' .

    $default  reduce using rule 51 (assign_list)


State 145

   50 assign_list: assign_list '(' ID expr . ')'

    ')'  shift, and go to state 147


State 146

   27 expr: '(' _let $@3 '(' assign_list ')' $@4 expr . ')'

    ')'  shift, and go to state 148


State 147

   50 assign_list: assign_list '(' ID expr ')' .

    $default  reduce using rule 50 (assign_list)


State 148

   27 expr: '(' _let $@3 '(' assign_list ')' $@4 expr ')' .

    $default  reduce using rule 27 (expr)
